...
    }

    private static func presentReminders(from presenter: UIViewController) {
        let reminder = RemindersTableViewController()
        let navController = UINavigationController(rootViewController: reminder)
        navController.navigationBar.prefersLargeTitles = true
        navController.navigationBar.topItem?.title = "Reminder"
        navController.navigationBar.isTranslucent = true
        presenter.topPresentedViewController.present(navController, animated: true, completion: nil)
    }
}

private extension UIViewController {
...
