...
    static let webViewNib = "WebViewController"
    static let foodBaseURL = "food.ubc.ca"
    static let totalModules = 4
    static let mainSegue = "showMain"
    static let homeItems = [
        HomeItem(
            title: "Food",
            subtitle: "Hours and Locations",
            imageName: "foodAll",
            segue: "showFood",
            detailText: "Cafés & bistros, residence dining rooms, food trucks, restaurants, and much more."
        ),
        HomeItem(
...
